trunk/Archive2/2a/0f3210a3c17e14/output
main.cpp:1:1: error: expected unqualified-id
-- A.hs
^
1 error generated.
